--- a/automation/config.env.example
+++ b/automation/config.env.example
@@ -3,6 +3,7 @@ DATABASE_PORT=5433
 DATABASE_NAME=possum
 DATABASE_USER=
 DATABASE_PASSWORD=
-GOOGLE_API_TOKEN_PATH=/arc/home/ErikOsinga/.ssh/psm_gspread_token.json
-POSSUM_STATUS_SHEET=https://docs.google.com/spreadsheets/d/1sWCtxSSzTwjYjhxr1_KVLWG2AnrHwSJf_RWQow7wbH0/edit?gid=785190940#gid=785190940
-POSSUM_PIPELINE_VALIDATION_SHEET=https://docs.google.com/spreadsheets/d/1_88omfcwplz0dTMnXpCj27x-WSZaSmR-TEsYFmBD43k/edit?gid=1573325884#gid=1573325884
+POSSUM_STATUS_TOKEN=/arc/home/ErikOsinga/.ssh/psm_gspread_token.json
+POSSUM_VALIDATION_TOKEN=/arc/home/ErikOsinga/.ssh/neural-networks--1524580309831-c5c723e2468e.json
+POSSUM_STATUS_SHEET=https://docs.google.com/spreadsheets/d/1sWCtxSSzTwjYjhxr1_KVLWG2AnrHwSJf_RWQow7wbH0
+POSSUM_PIPELINE_VALIDATION_SHEET=https://docs.google.com/spreadsheets/d/1_88omfcwplz0dTMnXpCj27x-WSZaSmR-TEsYFmBD43k
