Rename test files so they get picked up by unittest discover, remove unused constant

--- a/automation/config.env.example
+++ b/automation/config.env.example
@@ -4,6 +4,5 @@ DATABASE_NAME=possum
 DATABASE_USER=
 DATABASE_PASSWORD=
 POSSUM_STATUS_TOKEN=/arc/home/ErikOsinga/.ssh/psm_gspread_token.json
-POSSUM_VALIDATION_TOKEN=/arc/home/ErikOsinga/.ssh/neural-networks--1524580309831-c5c723e2468e.json
 POSSUM_STATUS_SHEET=https://docs.google.com/spreadsheets/d/1sWCtxSSzTwjYjhxr1_KVLWG2AnrHwSJf_RWQow7wbH0
-POSSUM_PIPELINE_VALIDATION_SHEET=https://docs.google.com/spreadsheets/d/1_88omfcwplz0dTMnXpCj27x-WSZaSmR-TEsYFmBD43k
+PREFECT_API_URL=
