--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 #vscode
 *code-workspace
 
+#dont commit the config.env
+config.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
