--- a/automation/config.env.example
+++ b/automation/config.env.example
@@ -5,4 +5,4 @@ DATABASE_USER=
 DATABASE_PASSWORD=
 POSSUM_STATUS_TOKEN=/arc/home/ErikOsinga/.ssh/psm_gspread_token.json
 POSSUM_STATUS_SHEET=https://docs.google.com/spreadsheets/d/1sWCtxSSzTwjYjhxr1_KVLWG2AnrHwSJf_RWQow7wbH0
-PREFECT_API_URL=
+PREFECT_API_URL="http://localhost:4200/api"
