Make sure test db is correct before executing tests

--- a/automation/config.env.template
+++ b/automation/config.env.template
@@ -1,8 +1,8 @@
-DATABASE_HOST=192.9.183.211
-DATABASE_PORT=5433
-DATABASE_NAME=possum
-DATABASE_USER=
-DATABASE_PASSWORD=
+POSSUM_DATABASE_HOST=
+POSSUM_DATABASE_PORT=
+POSSUM_DATABASE_NAME=
+POSSUM_DATABASE_USER=
+POSSUM_DATABASE_PASSWORD=
 POSSUM_STATUS_TOKEN=/arc/home/ErikOsinga/.ssh/psm_gspread_token.json
 POSSUM_STATUS_SHEET=https://docs.google.com/spreadsheets/d/1sWCtxSSzTwjYjhxr1_KVLWG2AnrHwSJf_RWQow7wbH0
 PREFECT_API_URL="http://localhost:4200/api"
