--- a/automation/unit_tests/test.env.example
+++ b/automation/unit_tests/test.env.example
@@ -1,5 +1,5 @@
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=testpossum
-DATABASE_USER=
-DATABASE_PASSWORD=
+TEST_DATABASE_HOST=localhost
+TEST_DATABASE_PORT=5432
+TEST_DATABASE_NAME=possum_test
+TEST_DATABASE_USER=
+TEST_DATABASE_PASSWORD=
