Check  test database details before running tests

--- a/automation/config.env.example
+++ b/automation/config.env.example
@@ -1,6 +1,6 @@
-DATABASE_HOST=[REDACTED_IP]
-DATABASE_PORT=5433
-DATABASE_NAME=possum
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
 POSSUM_STATUS_TOKEN=/arc/home/ErikOsinga/.ssh/psm_gspread_token.json
