--- a/.github/workflows/deploy-prefect.yaml
+++ b/.github/workflows/deploy-prefect.yaml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
     inputs:
       tag_name:
-        description: 'The name of the tag to process'
+        description: 'Docker image tag name'
         required: false
         type: string
         default: 'v1.18.0'
       python_version:
-        description: 'The python version used in the image name also'
+        description: 'The python version used for the image'
         required: false
         type: string
         default: '3.12'
