--- a/automation/prefect/prefect-git-clone.yaml
+++ b/automation/prefect/prefect-git-clone.yaml
@@ -25,6 +25,8 @@ pull:
   - prefect.deployments.steps.pip_install_requirements:
       requirements_file: requirements.txt
       directory: "{{ clone-step.directory }}"
+  - prefect.deployments.steps.set_working_directory:
+      directory:  '/opt/prefect'   
 
 deployments:
   - name: 3d-pipeline
