Set clone directory name for git clone

--- a/automation/prefect/prefect-git-clone.yaml
+++ b/automation/prefect/prefect-git-clone.yaml
@@ -18,12 +18,11 @@ push:
      tag: "{{ build-image.tag }}"
 
 pull:
-  - prefect.deployments.steps.set_working_directory:
-      directory:  '/opt/prefect'   
   - prefect.deployments.steps.git_clone:
       id: clone-step
       repository: https://github.com/riniangreani/POSSUMutils.git #TODO: update to real git
       branch: prefect_deploy #TODO: update to main
+      clone-directory-name: '/opt/prefect'
   - prefect.deployments.steps.pip_install_requirements:
       requirements_file: requirements.txt
       directory: "{{ clone-step.directory }}"
