--- a/automation/prefect/prefect-git-clone.yaml
+++ b/automation/prefect/prefect-git-clone.yaml
@@ -21,7 +21,7 @@ pull:
   - prefect.deployments.steps.git_clone:
       id: clone-step
       repository: https://github.com/riniangreani/POSSUMutils.git #TODO: update to real git
-      branch: prefect_deploy #TODO: update to main
+      branch: main
   - prefect.deployments.steps.pip_install_requirements:
       requirements_file: requirements.txt
       directory: "{{ clone-step.directory }}"
@@ -34,8 +34,6 @@ deployments:
     work_pool:
       name: local-pool
       work_queue_name: default
-    job_variables:
-      image: "{{ build-image.image }}"
   - name: 1d-pipeline-partial-tiles
     entrypoint: possum_pipeline_control/control_1D_pipeline_PartialTiles.py:main_flow
     env:
@@ -43,13 +41,9 @@ deployments:
     work_pool:
       name: local-pool
       work_queue_name: default
-    job_variables:
-      image: "{{ build-image.image }}"
   - name: refresh-cadc-proxy-pem
     entrypoint: automation/prefect/refresh_cadc_proxy_pem.py:main
     description: 'Handy script to manually refresh cadcproxy.pem from Prefect secret if needed.'
     work_pool:
       name: local-pool
       work_queue_name: default
-    job_variables:
-      image: "{{ build-image.image }}"
