--- a/.github/workflows/deploy-prefect.yaml
+++ b/.github/workflows/deploy-prefect.yaml
@@ -25,8 +25,8 @@ jobs:
       - name: Log in to Harbor
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}  
+          username: ${{ secrets.HARBOR_USERNAME }}
+          password: ${{ secrets.HARBOR_PASSWORD }}  
 
       - name: Setup Python
         uses: actions/setup-python@v5
