--- a/.github/workflows/deploy-prefect.yaml
+++ b/.github/workflows/deploy-prefect.yaml
@@ -25,6 +25,7 @@ jobs:
       - name: Log in to Harbor
         uses: docker/login-action@v3
         with:
+          registry: images.canfar.net
           username: ${{ secrets.HARBOR_USERNAME }}
           password: ${{ secrets.HARBOR_PASSWORD }}  
 
