attempt to fix github action for prefect deployment. We dont require building and pushing a docker image because the science-containers repo handles this and harbor is almost full

--- a/automation/prefect/prefect-git-clone.yaml
+++ b/automation/prefect/prefect-git-clone.yaml
@@ -2,24 +2,28 @@ prefect-version: null
 name: null
 description: "Deploy prefect flows with the latest POSSUM code from git."
 
-build:
- - prefect_docker.deployments.steps.build_docker_image:
-     id: build-image
-     requires: prefect-docker>=0.3.1
-     image_name: images.canfar.net/possumpipelineneprefect-{{ $VERSION }}
-     tag: "{{ $TAG }}"
-     dockerfile: auto
+#### building and pushing a prefect-compatible docker image is actually done
+#### by the CIRADA-Tools/science-container github repo.
+#### because we dont want to overload the images.canfar.net/harbor repository with many docker images
 
-push:
- - prefect_docker.deployments.steps.push_docker_image:
-     requires: prefect-docker>=0.3.1
-     image_name: "{{ build-image.image_name }}"
-     tag: "{{ build-image.tag }}"
+# build:
+#  - prefect_docker.deployments.steps.build_docker_image:
+#      id: build-image
+#      requires: prefect-docker>=0.3.1
+#      image_name: images.canfar.net/possumpipelineneprefect-{{ $VERSION }}
+#      tag: "{{ $TAG }}"
+#      dockerfile: auto
+
+# push:
+#  - prefect_docker.deployments.steps.push_docker_image:
+#      requires: prefect-docker>=0.3.1
+#      image_name: "{{ build-image.image_name }}"
+#      tag: "{{ build-image.tag }}"
 
 pull:
   - prefect.deployments.steps.git_clone:
       id: clone-step
-      repository: hhttps://github.com/ErikOsinga/POSSUMutils.git
+      repository: https://github.com/ErikOsinga/POSSUMutils.git
       branch: main
   - prefect.deployments.steps.pip_install_requirements:
       requirements_file: requirements.txt
@@ -33,7 +37,8 @@ deployments:
       work_queue_name: default
       job_variables:
         env:
-          IMAGE: "{{ build-image.image_name }}:{{ build-image.tag }}" #pass it on to code at run time so we know which one to pull from Harbor for Canfar
+          IMAGE: "images.canfar.net/cirada/possumpipelineprefect-{{ $VERSION }}:{{ $TAG }}"
+          #pass it on to code at run time so we know which one to pull from Harbor for Canfar
     
   - name: 1d-pipeline-partial-tiles
     entrypoint: possum_pipeline_control/control_1D_pipeline_PartialTiles.py:main_flow
@@ -42,7 +47,7 @@ deployments:
       work_queue_name: default
       job_variables:
         env:
-          IMAGE:: "{{ build-image.image_name }}:{{ build-image.tag }}"
+          IMAGE: "images.canfar.net/cirada/possumpipelineprefect-{{ $VERSION }}:{{ $TAG }}"
 
   - name: refresh-cadc-proxy-pem
     entrypoint: automation/prefect/refresh_cadc_proxy_pem.py:main
