Update readme and config example for Prefect

--- a/automation/config.env.example
+++ b/automation/config.env.example
@@ -1,3 +1,8 @@
+# Mandatory for Prefect
+PREFECT_API_URL=
+PREFECT_API_AUTH_STRING=
+
+# Optional unless testing with custom database and Google spreadsheet
 DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_NAME=
